--- a/plugin.yml
+++ b/plugin.yml
@@ -92,3 +92,6 @@ commands:
  permaday:
   description: Enable/disable permaday
   usage: /permaday on | off
+ deathban:
+  description: Enable/disable deathban
+  usage: /deathban on | off
