Automatically vanish all ops at launch time until match ends. Added /setvanish to update vanish if players are opped/deopped. Vanished players do not pick up/drop items.

--- a/plugin.yml
+++ b/plugin.yml
@@ -143,3 +143,6 @@ commands:
  pi:
   description: View a player's inventory
   usage: /pi player
+ setvanish:
+  description: Update vanish status of all players on the server
+  usage: /setvanish
