Updated default bonus chest contents. Fixes #18

--- a/config.yml
+++ b/config.yml
@@ -10,12 +10,7 @@ bonuschest:
 - null
 - null
 - null
-- ==: org.bukkit.inventory.ItemStack
-  type: CARROT_STICK
-- ==: org.bukkit.inventory.ItemStack
-  type: STONE_SWORD
-- ==: org.bukkit.inventory.ItemStack
-  type: WATCH
+- null
 - null
 - null
 - null
@@ -23,24 +18,27 @@ bonuschest:
 - null
 - null
 - ==: org.bukkit.inventory.ItemStack
-  type: STONE_PICKAXE
-- ==: org.bukkit.inventory.ItemStack
-  type: LEATHER_CHESTPLATE
-- ==: org.bukkit.inventory.ItemStack
-  type: STONE_SPADE
-- null
-- null
-- null
-- null
-- null
-- null
-- ==: org.bukkit.inventory.ItemStack
-  type: SADDLE
+  type: BOW
+  damage: 369
 - ==: org.bukkit.inventory.ItemStack
   type: STONE_AXE
 - ==: org.bukkit.inventory.ItemStack
-  type: MONSTER_EGG
-  damage: 90
+  type: STONE_PICKAXE
+- ==: org.bukkit.inventory.ItemStack
+  type: WATCH
+- ==: org.bukkit.inventory.ItemStack
+  type: STONE_SPADE
+- ==: org.bukkit.inventory.ItemStack
+  type: STONE_SWORD
+- ==: org.bukkit.inventory.ItemStack
+  type: LEATHER_CHESTPLATE
+- null
+- null
+- null
+- null
+- null
+- null
+- null
 - null
 - null
 - null
