Added ability for admins to temporarily interact with the world via /interact command. Fixes #50

--- a/plugin.yml
+++ b/plugin.yml
@@ -134,3 +134,6 @@ commands:
  teams:
   description: Commands for interacting with teams
   usage: /teams add | /teams rm | /teams
+ interact:
+  description: Enables/disables the ability for you to interact with the world
+  usage: /interact
