Made /match a synonym for /matchinfo

--- a/plugin.yml
+++ b/plugin.yml
@@ -131,6 +131,9 @@ commands:
  mi:
   description: Display status of the current match
   usage: /mi
+ match:
+  description: Display status of the current match
+  usage: /match
  players:
   description: Commands for interacting with players
   usage: /players add | /players rm | /players
