Added /tpback, closing #72. Refactored teleporting and healing/feeding into UhcPlayer/UhcStreamer objects. As a side-effect, this means that unregistered players can't currently be healed or fed. See issue #97

--- a/plugin.yml
+++ b/plugin.yml
@@ -33,6 +33,9 @@ commands:
  tpnext:
   description: Cycles through players
   usage: /tpnext
+ tpback:
+  description: Returns you to the position you were before your last teleport
+  usage: /tpback
  setspawn:
   description: Sets the spawn point to your current location
   usage: /setspawn
