Added paramters for AutoSpectate and NoLatecomers

--- a/config.yml
+++ b/config.yml
@@ -1,7 +1,9 @@
-deathban: true
+deathban: false
 uhc: true
 ffa: true
 nopvp: 300
+autospectate: true
+nolatecomers: false
 killerbonus:
  id: 266
  quantity: 4
