Added /params for players to get match params, and added a message to inform them of this when they are launched. Fixes #95

--- a/plugin.yml
+++ b/plugin.yml
@@ -134,6 +134,9 @@ commands:
  match:
   description: Display status of the current match
   usage: /match
+ params:
+  description: Display match parameters
+  usage: /params
  players:
   description: Commands for interacting with players
   usage: /players add | /players rm | /players
