--- a/plugin.yml
+++ b/plugin.yml
@@ -1,6 +1,6 @@
 name: TesseractUHC
 main: com.martinbrook.tesseractuhc.TesseractUHC
-version: 0.6.1
+version: 0.7-BETA
 description: Useful commands for UHC matches
 commands:
  tp:
