Added an option for skeleton-free UHC

--- a/config.yml
+++ b/config.yml
@@ -8,6 +8,7 @@ nolatecomers: false
 dragonmode: false
 damagealerts: true
 dropheads: true
+noskeletons: false
 killerbonus:
  id: 266
  quantity: 4
